release: Dyncamic color and Theme application logic